# Test1

./: .gitignore  DEPLOY.md  README.md  debate.py  requirements.txt  stock_metrics.py  vercel.json
api/: generate.py  market.py
hiring-signal-tracker/: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
hiring-signal-tracker/config/: watchlist.yaml
hiring-signal-tracker/migrations/: ddl_0001_initial.sql  ddl_0002_pgvector.sql  env.py
hiring-signal-tracker/migrations/versions/: 0001_initial.py  0002_pgvector.py
hiring-signal-tracker/src/hiring_tracker/: __init__.py  cli.py  config.py  db.py  diff.py  digest.py  ingest.py  logging_util.py  metrics.py  models.py  normalize.py  preflight.py  schedule.py  util.py  vector.py
hiring-signal-tracker/src/hiring_tracker/adapters/: __init__.py  ashby.py  base.py  custom_careers.py  greenhouse.py  lever.py  workable.py
hiring-signal-tracker/src/hiring_tracker/dashboard/: __init__.py  app.py
hiring-signal-tracker/tests/: conftest.py  test_adapters_contract.py  test_diff.py  test_idempotency.py  test_metrics.py  test_normalize.py
public/: index.html  spgi.json
sotp_generator/: .gitignore  README.md  requirements.txt  sotp.py
sotp_generator/configs/: SPGI.yaml
sotp_generator/sotp_gen/: __init__.py  build.py  model.py  providers.py  sheets_engine.py  sheets_narrative.py  styles.py
sotp_generator/tests/: test_golden_spgi.py
