[project]
name = "hiring-signal-tracker"
version = "0.1.0"
description = "Track job-posting activity across a watchlist of public companies as an alternative-data signal for event-driven research."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Hiring-Signal Tracker" }]
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.2",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "anthropic>=0.39",
]

[project.optional-dependencies]
dashboard = ["fastapi>=0.110", "uvicorn>=0.29", "jinja2>=3.1"]
vector = ["pgvector>=0.2.5"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
hiring-tracker = "hiring_tracker.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "live: hits real ATS endpoints; skipped unless HST_LIVE=1 and network is reachable",
]

[tool.hiring_tracker]
# Non-secret defaults; override via .env / environment.
poll_cadence = "daily"
repost_window_days = 45
stale_after_days = 3
